fix scrollbar showing up on iframe

--- a/src/pages/Game/game.css
+++ b/src/pages/Game/game.css
@@ -16,3 +16,11 @@ canvas {
 .chat-input input {
     flex: 1;
 }
+
+phaser-game {
+    display: block;
+}
+
+html {
+    overflow: hidden;
+}
